[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Admin Testing Room/TX Props.png" type="Texture" id=1]
[ext_resource path="res://Assets/Admin Testing Room/TX Shadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/RuinMap/signObject.gd" type="Script" id=3]
[ext_resource path="res://Assets/Popup Emotes/pipo-popupemotes001.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 100.842, 168.316, 28.4211, 29.4737 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96.25, 158.25, 30, 36 )

[sub_resource type="CircleShape2D" id=3]
radius = 4.12311

[sub_resource type="CircleShape2D" id=5]
radius = 15.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="SignRight" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 3, -6 )
texture = SubResource( 1 )

[node name="SignRight" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ui_accept" type="TouchScreenButton" parent="."]
position = Vector2( -31, -41 )
shape = SubResource( 5 )
action = "ui_accept"
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="ui_accept"]
visible = false
position = Vector2( 16, 16 )
frames = SubResource( 9 )
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
